
[4.20.17]
* Bug fixes and improvements.
- Fixed incorrect limit for radial lines in Discrete Lines infill.
- Linux builds are now using a more recent Qt release to improve Wayland support.

[4.20.16]
* Bug fixes and improvements.
- Reworked bridge skin lines orientation.

[4.20.15]
* New Features
- Added Scattered Rectilinear infill pattern.
- Added preference to enable layer view antialiasing.

[4.20.14]
* New features
- Added Process Layers Sequentially setting. When enabled, layers are processed sequentially in print order.
- When the path slider has the focus, the space key toggles the visibility of the line details.

[4.20.13]
* New features
- Added settings to specify the skin pattern (lines or zig-zag) used on each bridge layer (suggested by PhilBaz).
- Can now display details of the current line in the layer view as the path slider is moved.

* Bug fixes and improvements.
- Fixed bug when tapering horizontal expansion.
- Infill walls are now enabled when infill is multi-layer (but still no skin edge support).
- Further tweaks to the combed travel.

[4.20.12]
* New features
- Added Overlap Concentric Skin Lines setting that makes concentric skin lines on even layers overlap the skin lines on odd layers.

* Bug fixes and improvements.
- Now outputs FILAMENT_USED comment before each layer to report total filament used so far (suggested by PhilBaz).
- Now looks for Discrete Lines infill definition files in CURA_DIR/dli_definitions (suggested by 5axes).
- Reduced likelihood of jaggies occuring in concentric infill.

[4.20.11]
* New features
- Added Remove Floating Inner Walls & Floating Inner Walls Margin settings.

* Bug fixes and improvements.
- Combed travel moves should now be routed slightly further away from outer walls.
- Updated FR translation (contributed by 5axes)
- Added Mb-master setting visibility (contributed by 5axes)


[4.20.10]
* New features
- Added Bridge Wall Layers setting.
- Added Maximum Bridge Wall Length setting.