@@ -7052,7 +7052,17 @@
                     "settable_per_mesh": false,
                     "settable_per_extruder": false
                 },
-                "smooth_spiralized_contours":
+                "spiral_bottom_layers_get_extra_walls":
+                {
+                    "label": "Add Walls On Even Numbered Bottom Layers",
+                    "description": "When enabled, even numbered solid bottom layers are printed with 5 extra walls",
+                    "type": "bool",
+                    "default_value": true,
+                    "enabled": "magic_spiralize",
+                    "settable_per_mesh": false,
+                    "settable_per_extruder": false
+                },
+               "smooth_spiralized_contours":
                 {
                     "label": "Smooth Spiralized Contours",
                     "description": "Smooth the spiralized contours to reduce the visibility of the Z seam (the Z seam should be barely visible on the print but will still be visible in the layer view). Note that smoothing will tend to blur fine surface details.",
